# uart

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  reciever.sv  transmitter.sv  uartUtil.sv
testing/: CMakeLists.txt  sim_main.cpp
testing/recieverTb/: CMakeLists.txt  recieverTb.cpp  recieverTb.sv  recieverTb.tcl
testing/transmitterTb/: CMakeLists.txt  transmitterTb.sv  transmitterTb.tcl
